--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -401,7 +401,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 <tr>
 	  <td>
 	  <b><a name="note27"/>27. Let the days in excess of the months be placed before the month of fasting. <a href="p019-088Aqdas.html#para16">&para;16</a></b><p>
-	  The Badí' calendar is based on the solar year of 365 days, 5 hours, and 50 odd minutes. The year consists of 19 months of 19 days each (i.e. 361 days), with the addition of four extra days (five in a leap year). The Báb did not specifically define the place for the <span title="Having a day (or days) inserted to make the calendar year correspond to the solar year.">intercalary</span> days in the new calendar. The Kitáb-i-Aqdas resolves this question by assigning the <i>"excess"</i> days a fixed position in the calendar immediately preceding the month of 'Alá', the period of fasting. For further details see the section on the Bahá'í calendar in <i>The Bahá'í World</i>, volume XVIII.<p>
+	  The Badí' calendar is based on the solar year of 365 days, 5 hours, and 50 odd minutes. The year consists of 19 months of 19 days each (i.e. 361 days), with the addition of four extra days (five in a leap year). The Báb did not specifically define the place for the <span title="Having a day (or days) inserted to make the calendar year correspond to the solar year.">intercalary</span> days in the new calendar. The Kitáb-i-Aqdas resolves this question by assigning the <i>"excess"</i> days a fixed position in the calendar immediately preceding the month of 'Alá', the period of fasting. For further details see the <a href="../../UHJ/Messages/Baha'iDatesCalendar.htm#SectionEBaha'iWorld">section on the Bahá'í calendar in <i>The Bahá'í World</i>, volume XVIII</a>.<p>
 	  </td>
 	  <td VALIGN=top>
 	  <small>	  
@@ -1910,7 +1910,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <td>
 	  <b><a name="note139"/>139. the first day of the month of Bahá <a href="p019-088Aqdas.html#para111">&para;111</a></b><p>
 	  In the Bahá'í calendar the first month of the year and the first day of each month are given the name "Bahá". The day of Bahá of the month of Bahá is thus the Bahá'í New Year, Naw-Rúz, which was ordained by the Báb as a festival and is here confirmed by Bahá'u'lláh (see <a href="p165-251Notes.html#note26">notes 26</a> and <a href="p165-251Notes.html#note147">147</a>).<p>
-	  In addition to the seven Holy Days ordained in these passages of the Kitáb-i-Aqdas, the anniversary of the Martyrdom of the Báb was also commemorated as a Holy Day in the lifetime of Bahá'u'lláh and, as a corollary to this, 'Abdu'l-Bahá added the observance of the Ascension of Bahá'u'lláh, making nine Holy Days in all. Two other anniversaries which are observed, but on which work is not suspended, are the Day of the Covenant and the anniversary of the Passing of 'Abdu'l-Bahá. See the section on the Bahá'í calendar in <i>The Bahá'í World</i>, volume XVIII.<p>
+	  In addition to the seven Holy Days ordained in these passages of the Kitáb-i-Aqdas, the anniversary of the Martyrdom of the Báb was also commemorated as a Holy Day in the lifetime of Bahá'u'lláh and, as a corollary to this, 'Abdu'l-Bahá added the observance of the Ascension of Bahá'u'lláh, making nine Holy Days in all. Two other anniversaries which are observed, but on which work is not suspended, are the Day of the Covenant and the anniversary of the Passing of 'Abdu'l-Bahá. See the <a href="../../UHJ/Messages/Baha'iDatesCalendar.htm#SectionEBaha'iWorld">section on the Bahá'í calendar in <i>The Bahá'í World</i>, volume XVIII</a>.<p>
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
@@ -1992,11 +1992,11 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  Bahá'u'lláh here alludes to 'Abdu'l-Bahá as His Successor and calls upon the believers to turn towards Him. In the Book of the Covenant, His Will and Testament, Bahá'u'lláh discloses the intention of this verse. He states: <i>"The object of this sacred verse is none other except the Most Mighty Branch."</i> The <i>"Most Mighty Branch"</i> is one of the titles conferred by Bahá'u'lláh on 'Abdu'l-Bahá. (See also notes <a href="p165-251Notes.html#note66">66</a> and <a href="p165-251Notes.html#note184">184</a>.)<p>
 	  </td>
 	  <td VALIGN=top><hr><small>
-	  ["When the ocean of My presence..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p134">p. 134</a>; vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p371">p. 371</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para5">p. 238</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para8">p. 239</a><p>
-		 [CLUI:<br>
-		 <a href="../../../CLUI/UnifiedIndex.html#'Abdu'l-BaháInterpreterofWritingsofBahá'u'lláh">'Abdu'l-Bahá</a>,<br>
-		 <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-'Ahdí"><i>Kitáb-i-'Ahdí</i></a><br>
-		 ]
+		["When the ocean of My presence..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para597">p. 221</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p134">p. 134</a>; vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p371">p. 371</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para5">p. 238</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para8">p. 239</a><p>
+		[CLUI:<br>
+		<a href="../../../CLUI/UnifiedIndex.html#'Abdu'l-BaháInterpreterofWritingsofBahá'u'lláh">'Abdu'l-Bahá</a>,<br>
+		<a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-'Ahdí"><i>Kitáb-i-'Ahdí</i></a><br>
+		]
 	  </small></td>
 	  <td>&nbsp;</td>
 </tr>
@@ -2016,7 +2016,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 <tr>
 	  <td>
 	  <b><a name="note147"/>147. The number of months in a year, appointed in the Book of God, is nineteen. <a href="p019-088Aqdas.html#para127">&para;127</a></b><p>
-	  The Bahá'í year, in accordance with the Badí' calendar, consists of nineteen months of nineteen days each, with the addition of certain <span title="Having a day (or days) inserted to make the calendar year correspond to the solar year.">intercalary</span> days (four in an ordinary year and five in a leap year) between the eighteenth and nineteenth months in order to adjust the calendar to the solar year. The Báb named the months after certain attributes of God. The Bahá'í New Year, Naw-Rúz, is astronomically fixed, coinciding with the March equinox (see <a href="p165-251Notes.html#note26">note 26</a>). For further details, including the names of the days of the week and the months, see the section on the Bahá'í calendar in <i>The Bahá'í World</i>, volume XVIII.<p>
+	  The Bahá'í year, in accordance with the Badí' calendar, consists of nineteen months of nineteen days each, with the addition of certain <span title="Having a day (or days) inserted to make the calendar year correspond to the solar year.">intercalary</span> days (four in an ordinary year and five in a leap year) between the eighteenth and nineteenth months in order to adjust the calendar to the solar year. The Báb named the months after certain attributes of God. The Bahá'í New Year, Naw-Rúz, is astronomically fixed, coinciding with the March equinox (see <a href="p165-251Notes.html#note26">note 26</a>). For further details, including the names of the days of the week and the months, see the <a href="../../UHJ/Messages/Baha'iDatesCalendar.htm#SectionEBaha'iWorld">section on the Bahá'í calendar in <i>The Bahá'í World</i>, volume XVIII</a>.<p>
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
