--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -8,6 +8,22 @@
 <html>
 <head>
 	<title>Tablets of Bahá'u'lláh</title>
+
+	<style>
+	/* highlighted href*/
+	a.hh:link, a.hh:visited {
+	  background-color: #ffffCF;
+	  color: black;
+	  text-decoration: none;
+	  display: inline-block;
+	  }
+
+	a.hh:hover, a.hh:active {
+	 text-decoration:underline;
+	 }
+	 
+	</style>
+		
 </head>
 
 <body>
@@ -346,7 +362,8 @@
 	I never passed a tree but Mine heart addressed it saying: 'O would that thou wert cut down in My name, and My body crucified upon thee.' We revealed this passage in the Epistle to the Sháh that it might serve as a warning to the followers of religions. Verily, thy Lord is the All-Knowing, the All-Wise.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán">Epistle to the Sháh</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1075,7 +1092,7 @@
 </tr>
 <tr>
 	<td><a name="para111"></a>
-	'We will now mention unto thee Trustworthiness and the station thereof in the estimation of God, thy Lord, the Lord of the Mighty Throne. One day of days We repaired unto Our Green Island. Upon Our arrival, We beheld its streams flowing, and its trees luxuriant, and the sunlight playing in their midst. Turning Our face to the right, We <a name="p38"/>beheld what the pen is powerless to describe; nor can it set forth that which the eye of the Lord of Mankind witnessed in that most sanctified, that most sublime, that blest, and most exalted Spot. Turning, then, to the left We gazed on one of the Beauties of the Most Sublime Paradise, standing on a pillar of light, and calling aloud saying: "O inmates of earth and heaven! Behold ye My beauty, and My radiance, and My revelation, and My effulgence. By God, the True One! I am Trustworthiness and the revelation thereof, and the beauty thereof. I will recompense whosoever will cleave unto Me, and recognize My rank and station, and hold fast unto My hem. I am the most great ornament of the people of Bahá, and the vesture of glory unto all who are in the kingdom of creation. I am the supreme instrument for the prosperity of the world, and the horizon of assurance unto all beings." Thus have We sent down for thee that which will draw men nigh unto the Lord of creation.'
+	'We will now mention unto thee Trustworthiness and the station thereof in the estimation of God, thy Lord, the Lord of the Mighty Throne. One day of days We repaired unto <a class="hh" title="A 'verdant knoll', less than a kilometre from the walls of 'Akká, around which the Na'mayn River divides before it empties into the sea. 'Abdul-Bahá rented this island in 1875 for Bahá'u'lláh as a place of rest and beauty for Him. Bahá'u'lláh named it Ridván (Paradise), and called it the 'New Jerusalem' and 'Our Verdant Isle'. In 1881 it was purchased in His name" href="../../../CLUG/UnifiedGlossary.html#Ridván,Gardenof'Akká">Our Green Island</a>. Upon Our arrival, We beheld its streams flowing, and its trees luxuriant, and the sunlight playing in their midst. Turning Our face to the right, We <a name="p38"/>beheld what the pen is powerless to describe; nor can it set forth that which the eye of the Lord of Mankind witnessed in that most sanctified, that most sublime, that blest, and most exalted Spot. Turning, then, to the left We gazed on one of the Beauties of the Most Sublime Paradise, standing on a pillar of light, and calling aloud saying: "O inmates of earth and heaven! Behold ye My beauty, and My radiance, and My revelation, and My effulgence. By God, the True One! I am Trustworthiness and the revelation thereof, and the beauty thereof. I will recompense whosoever will cleave unto Me, and recognize My rank and station, and hold fast unto My hem. I am the most great ornament of the people of Bahá, and the vesture of glory unto all who are in the kingdom of creation. I am the supreme instrument for the prosperity of the world, and the horizon of assurance unto all beings." Thus have We sent down for thee that which will draw men nigh unto the Lord of creation.'
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -3245,7 +3262,7 @@
 </tr>
 <tr>
 	<td><a name="para339"></a>
-	We will now mention unto thee Trustworthiness and the station thereof in the estimation of God, thy Lord, the <a name="p122"/>Lord of the Mighty Throne. One day of days We repaired unto Our Green Island. Upon Our arrival, We beheld its streams flowing, and its trees luxuriant, and the sunlight playing in their midst. Turning Our face to the right, We beheld what the pen is powerless to describe; nor can it set forth that which the eye of the Lord of Mankind witnessed in that most sanctified, that most sublime, that blest, and most exalted Spot. Turning, then, to the left We gazed on one of the Beauties of the Most Sublime Paradise, standing on a pillar of light, and calling aloud saying: 'O inmates of earth and heaven! Behold ye My beauty, and My radiance, and My revelation, and My effulgence. By God, the True One! I am Trustworthiness and the revelation thereof, and the beauty thereof. I will recompense whosoever will cleave unto Me, and recognize My rank and station, and hold fast unto My hem. I am the most great ornament of the people of Bahá, and the vesture of glory unto all who are in the kingdom of creation. I am the supreme instrument for the prosperity of the world, and the horizon of assurance unto all beings.' Thus have We sent down for thee that which will draw men nigh unto the Lord of creation.
+	We will now mention unto thee Trustworthiness and the station thereof in the estimation of God, thy Lord, the <a name="p122"/>Lord of the Mighty Throne. One day of days We repaired unto <a class="hh" title="Garden of Ridván, 'Akká (Na'mayn)" href="../../../CLUG/UnifiedGlossary.html#Ridván,Gardenof'Akká">Our Green Island</a>. Upon Our arrival, We beheld its streams flowing, and its trees luxuriant, and the sunlight playing in their midst. Turning Our face to the right, We beheld what the pen is powerless to describe; nor can it set forth that which the eye of the Lord of Mankind witnessed in that most sanctified, that most sublime, that blest, and most exalted Spot. Turning, then, to the left We gazed on one of the Beauties of the Most Sublime Paradise, standing on a pillar of light, and calling aloud saying: 'O inmates of earth and heaven! Behold ye My beauty, and My radiance, and My revelation, and My effulgence. By God, the True One! I am Trustworthiness and the revelation thereof, and the beauty thereof. I will recompense whosoever will cleave unto Me, and recognize My rank and station, and hold fast unto My hem. I am the most great ornament of the people of Bahá, and the vesture of glory unto all who are in the kingdom of creation. I am the supreme instrument for the prosperity of the world, and the horizon of assurance unto all beings.' Thus have We sent down for thee that which will draw men nigh unto the Lord of creation.
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -5712,7 +5729,8 @@
 	The Will of the divine Testator is this: It is incumbent upon the Aghsán, the Afnán and My Kindred to turn, one and all, their faces towards the Most Mighty Branch. Consider that which We have revealed in Our Most Holy Book: 'When the ocean of My presence hath ebbed and the Book of My Revelation is ended, turn your faces towards Him Whom God hath purposed, Who hath branched from this Ancient Root.' The object of this sacred verse is none except the Most Mighty Branch ['Abdu'l-Bahá]. Thus have We graciously revealed unto you Our potent Will, and I am verily the Gracious, the <a name="p222"/>All-Powerful. Verily God hath ordained the station of the Greater Branch [Muhammad 'Alí] to be beneath that of the Most Great Branch ['Abdu'l-Bahá]. He is in truth the Ordainer, the All-Wise. We have chosen 'the Greater' after 'the Most Great', as decreed by Him Who is the All-Knowing, the All-Informed.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["When the ocean of My presence..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para121">&para;121</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">222</DIV></center><p></small></td>
 </tr>
