--- a/Baha'i/Others/ROB/V1/p325-331Apndx_III.html
+++ b/Baha'i/Others/ROB/V1/p325-331Apndx_III.html
@@ -2,9 +2,8 @@
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V1\p325-331Apndx_III.html -->
 
 <!--  ISSUES LOG
-page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
-    Not sure what book this refers to...it is not this present volume.
  -->
+ 
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 1, Appendix III</title>
@@ -103,7 +102,10 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
        <td></td>
        <td VALIGN=top><small><center><a name="p329">329</a></center><p>
 	   * According to the Báb's testimony, He revealed the Word of God at the rate of one thousand verses in six hours.<p>
-	   † According to the "Kashfu'l-Ghitá" (p. 81), no less than two thousand verses were revealed on that occasion by the Báb. The bewildering rapidity of this revelation was no less remarkable in the eyes of Siyyid Yahyá than the matchless beauty and profound meaning of the verses contained in that commentary. (Ed.)
+	   † According to the "Kashfu'l-Ghitá" (p. 81), no less than two thousand verses were revealed on that occasion by the Báb. The bewildering rapidity of this revelation was no less remarkable in the eyes of Siyyid Yahyá than the matchless beauty and profound meaning of the verses contained in that commentary. (Ed.)<p>
+	   <hr>
+	   <hr>
+	   [CLUI: <i><a href="../../../../CLUI/UnifiedIndex.html#Kashfu'l-Ghitá">Kashfu'l-Ghitá</a></i>]
 	   </small></td>
 </tr>
 <tr>
