--- a/Baha'i/Others/ROB/V2/p427-437Apndx_II.html
+++ b/Baha'i/Others/ROB/V2/p427-437Apndx_II.html
@@ -4,6 +4,23 @@
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Appendix II</title>
+
+	<style>
+	/* highlighted href
+	<a class="hh" title="" href="#"></a>
+	*/
+	a.hh:link, a.hh:visited {
+	  background-color: #ffffCF;
+	  color: black;
+	  text-decoration: none;
+	  display: inline-block;
+	  }
+
+	a.hh:hover, a.hh:active {
+	 text-decoration:underline;
+	 }
+	 
+	</style>
 </head>
 
 <body>
@@ -13,7 +30,7 @@
        <td>
 	   	   <FORM ACTION="p422-426Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +38,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p438-450Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -37,7 +54,7 @@
 	   <center><h2>A Visit to Adrianople<br>from an article<br>by Martha L. Root<small><sup><small>1</small></sup></small></h2></center><p>
 	   <p>
 	   ...We know He [Bahá'u'lláh] arrived with His family and friends on Saturday, 12 December 1863, and remained until Wednesday, 12 August 1868; He was forty-six years old when He came and His son, 'Abbás Effendi known as 'Abdu'l-Bahá, was a youth of nineteen years while His daughter, Bahíyyih Khánum, was a girl seventeen years old. How different was their journey from Constantinople to the present luxurious Oriental Express trip when the train speeds swiftly over the distance in exactly six hours' time! Their journey to Adrianople, evidently hurried and enforced, for they were not prepared and were only thinly clad, took twelve days and was full of hardships as the weather was bitterly cold. Bahíyyih Khánum said long years after that she was a strong, well girl before those terrible exile journeys.<p>
-	   Their first lodging in Adrianople was in the Khán-i-'Arab Caravanserai where they stayed three nights. All one knew about it was that it was near the house of 'Izzat Áqá. Then they lived for one week in a house in the Murádíyyih quarter near the Takyiy-i-Mawlaví and then changed to a winter house close by. Twice Bahá'u'lláh lived in the house of Amru'lláh Big, which has been spoken of by Áqá Ridá in his early account as a three-storey house to the North of Sultán Salím Mosque. Another house in which He lived was the home of Ridá Big. Then He returned to the residence of Amru'lláh Big, but the last eleven months of His stay were spent in the home of 'Izzat Áqá. We know, too, that He was sometimes in the
+	   Their first lodging in Adrianople was in the Khán-i-'Arab Caravanserai where they stayed three nights. All one knew about it was that it was near the house of 'Izzat Áqá. Then they lived for one week in a house in the Murádíyyih quarter near the Takyiy-i-Mawlaví and then changed to a winter house close by. Twice Bahá'u'lláh lived in the house of Amru'lláh <a class="hh" title="Honorary title placed after a man's name, meaning 'lord' or 'prince'" href="../../../../CLUG/UnifiedGlossary.html#Big">Big</a>, which has been spoken of by Áqá Ridá in his early account as a three-storey house to the North of Sultán Salím Mosque. Another house in which He lived was the home of Ridá Big. Then He returned to the residence of Amru'lláh Big, but the last eleven months of His stay were spent in the home of 'Izzat Áqá. We know, too, that He was sometimes in the
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p427">427</a></center><p>
@@ -88,8 +105,8 @@
 </tr>
 <tr>
        <td>
-	   had been two 'Bahá'í Bigs'*--one great Persian, who lived in the mansion just adjoining the entrance gate to the Murádíyyih Mosque, seldom went out, but the other one, 'Abbás Big, used to go everywhere and used to treat the boys with much friendliness; but the great Bahá'í Big, too, was good to the boys. He had pilau given to them. This man told us too, and showed us what an immense house had been the mansion of Bahá'u'lláh; it had eighteen rooms and a Turkish bath--one can see from the site that it had been a very great mansion. The house was demolished in the Russian war fifty years ago; a cheap house had been built twenty-five years ago on the part of the lot nearest to the entrance gate, but most of that, too, had been razed in the last Balkan war. Muhammad Hilmí Big showed us that just beyond the wall of Bahá'u'lláh's house was a stretch of land through which runs a brook, and the Bahá'ís also had that entire place which extended down to the river in that time. There were several different buildings including stables and a large, long garden. He told us that these Persians had beautiful Arabian horses and two donkeys. There had been a house rather larger than the others in this garden enclosure, situated at the lower bend of the grounds and several people told us that Bahá'u'lláh had also lived there for a short time. That house overlooked the summer palace of the Sultán which stood lower on an opposite slope still in the Murádíyyih section. Now there is only the site of Bahá'u'lláh's house, all his houses were demolished in the wars. We think that Bahá'u'lláh might have lived in this lower house the first week as it was close to the Takyiy-i-Mawlaví, just as an early historian relates. It could be reached from Takyiy-i-Mawlaví and Murádíyyih Mosque by going down a steep, narrow pathway part of which is stone steps, or one could have approached it through the garden.<p>
-	   Muhammad Hilmí Big told us there were more than fifty Persians living in these places and that very many visitors came; they, too, were entertained there. This genial man explained
+	   had been two 'Bahá'í <a class="hh" title="Honorary title placed after a man's name, meaning 'lord' or 'prince'" href="../../../../CLUG/UnifiedGlossary.html#Big">Big</a>s'*--one great Persian, who lived in the mansion just adjoining the entrance gate to the Murádíyyih Mosque, seldom went out, but the other one, 'Abbás Big, used to go everywhere and used to treat the boys with much friendliness; but the great Bahá'í Big, too, was good to the boys. He had pilau given to them. This man told us too, and showed us what an immense house had been the mansion of Bahá'u'lláh; it had eighteen rooms and a Turkish bath--one can see from the site that it had been a very great mansion. The house was demolished in the Russian war fifty years ago; a cheap house had been built twenty-five years ago on the part of the lot nearest to the entrance gate, but most of that, too, had been razed in the last Balkan war. Muhammad Hilmí Big showed us that just beyond the wall of Bahá'u'lláh's house was a stretch of land through which runs a brook, and the Bahá'ís also had that entire place which extended down to the river in that time. There were several different buildings including stables and a large, long garden. He told us that these Persians had beautiful Arabian horses and two donkeys. There had been a house rather larger than the others in this garden enclosure, situated at the lower bend of the grounds and several people told us that Bahá'u'lláh had also lived there for a short time. That house overlooked the summer palace of the Sultán which stood lower on an opposite slope still in the Murádíyyih section. Now there is only the site of Bahá'u'lláh's house, all his houses were demolished in the wars. We think that Bahá'u'lláh might have lived in this lower house the first week as it was close to the Takyiy-i-Mawlaví, just as an early historian relates. It could be reached from Takyiy-i-Mawlaví and Murádíyyih Mosque by going down a steep, narrow pathway part of which is stone steps, or one could have approached it through the garden.<p>
+	   Muhammad Hilmí Big told us there were more than fifty Persians living in these places and that very many visitors came; they, too, were entertained there. This genial man explained 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p432">432</a></center><p>
@@ -135,7 +152,7 @@
 	   that one of the members of Bahá'u'lláh's family gave Persian lessons to the head of the Mevlevi Cherleri dervishes.*<p>
 	   Our kind Adrianople friend, Muhammad Hilmí Bey, at the end of our visit said very softly that perhaps we knew they were exiles because they changed religion, but he added most sincerely and with love straight from the heart: 'They were very, very kind, they didn't harm anybody and they did good to everybody!'<p>
 	   Then he said good-bye to us and with a questioning smile--before he started cane in hand to stride slowly down the hill to his house--this brave, true man who has seen three Balkan wars and the world war despoil Adrianople said to us: 'How have you liked us Turks? Do you find Turkish folks don't eat people from other countries!' Beloved Turkish brother whose boyhood home was close beside the house of Bahá'u'lláh, if only we could express to you how lovely we found you and how kind we found the citizens of Adrianople! And to learn from you and others that your citizens here were good to Bahá'u'lláh endears us forever to your historic city!<p>
-	   The home of Amru'lláh Big was the third residence where Bahá'u'lláh lived in Adrianople; this site was the easiest to find and was verified by the greatest number of citizens. This great house stood just near the main entrance to the magnificent Sultán Salím Mosque,...Also, a man in public life showed us this place--and walked with us on through two or three other streets and pointed out the sites of the houses of Ridá Big and 'Izzat Áqá and the Khán-i-'Arab Caravanserai site very near the grounds of 'Izzat Áqá. We could see from the ruins that the
+	   The home of Amru'lláh Big was the third residence where Bahá'u'lláh lived in Adrianople; this site was the easiest to find and was verified by the greatest number of citizens. This great house stood just near the main entrance to the magnificent Sultán Salím Mosque,...Also, a man in public life showed us this place--and walked with us on through two or three other streets and pointed out the sites of the houses of Ridá Big and 'Izzat Áqá and the Khán-i-'Arab Caravanserai site very near the grounds of 'Izzat Áqá. We could see from the ruins that the 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p433">433</a></center><p>
@@ -146,7 +163,7 @@
        <td>
 	   three residences were all remarkably large mansions and we heard that all three hosts were distinguished men of Adrianople at that time.<p>
 	   Now this Amru'lláh Big lot, which is like one whole block--and the house covered all of it--is only a place of ruins; the ground is covered with crumbled stones, flowering thistles and weeds. Part of the old wall still stands and a large portion of an enormous old fireplace which the Turks call the 'kitchen'.<p>
-	   We heard of an old man, Mustafá Big, eighty-five years old, who had seen Bahá'u'lláh. When we met him he told us that he had been a neighbour living near the house of Amru'lláh Big and that he had carried yogurt to "Bahá'í Big" (Bahá'u'lláh), and the latter always had pilau given to him to carry home. His eyes shone as he spoke of Bahá'u'lláh, and he tried to show us how noble He was; this kindly, sincere old man, a Turk, stood up and tried to make us understand how Bahá'í Big walked with such dignity and power, and how He bowed to people who saluted Him--he told us that all people saluted Bahá'u'lláh, that every one loved and revered Him.<p>
+	   We heard of an old man, Mustafá Big, eighty-five years old, who had seen Bahá'u'lláh. When we met him he told us that he had been a neighbour living near the house of Amru'lláh Big and that he had carried yogurt to "Bahá'í <a class="hh" title="Honorary title placed after a man's name, meaning 'lord' or 'prince'" href="../../../../CLUG/UnifiedGlossary.html#Big">Big</a>" (Bahá'u'lláh), and the latter always had pilau given to him to carry home. His eyes shone as he spoke of Bahá'u'lláh, and he tried to show us how noble He was; this kindly, sincere old man, a Turk, stood up and tried to make us understand how Bahá'í Big walked with such dignity and power, and how He bowed to people who saluted Him--he told us that all people saluted Bahá'u'lláh, that every one loved and revered Him.<p>
 	   We were informed that Bahá'u'lláh had a kitchen for the poor.<p>
 	   This man told us, too, that Bahá'u'lláh had a great vineyard--from his description we think it was like a garden with an arbour in the centre. He said that Bahá'u'lláh went there often, sometimes alone to spend the day, sometimes He went there with His friends and they walked up and down. When He would return at night with his cortége, this man told us, that Bahá'u'lláh's twenty servants (followers) would all stand together outside the house to salute Him and He always returned their greeting so lovingly.<p>
 	   We took this good friend with us and went out to the vineyard site. He measured off the distances and showed us where the entrance gate had been. The grounds would cover in area about three city blocks; the land is on an elevation and the place is only about seven minutes' walk from Sultán Salím Mosque. This vineyard was between the Murádíyyih Mosque slope and
@@ -190,7 +207,7 @@
        <td>
 	   	   <FORM ACTION="p422-426Apndx_I.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -198,12 +215,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p438-450Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
