--- a/Baha'i/Others/ROB/V3/p001-031Ch01.html
+++ b/Baha'i/Others/ROB/V3/p001-031Ch01.html
@@ -545,6 +545,9 @@ p. 16	   added paragraph separator in God Passes By quote to match the book itse
        <td></td>
        <td VALIGN=top><small><center><a name="p30">30</a></center><p>
 	   * Each letter of the Arabic alphabet has a numerical value; therefore it is possible to express a word by a number and vice versa.
+	   <hr>
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Abjad">Abjad</a>]
 	   </small></td>
 </tr>
 <tr>
