--- a/Baha'i/SE/GPB/p001-086FirstPeriod.html
+++ b/Baha'i/SE/GPB/p001-086FirstPeriod.html
@@ -399,7 +399,7 @@ He Who communicated the original impulse to so incalculable a Movement was none 
 	It was this Book which the Bábís universally regarded, during almost the entire ministry of the Báb, as the Qur'án of the people of the Bayán; whose first and most challenging chapter was revealed in the presence of Mullá Husayn, on the night of its Author's Declaration; some of whose pages were borne, by that same disciple, to Bahá'u'lláh, as the first fruits of a Revelation which instantly won His enthusiastic allegiance; whose entire text was translated into Persian by the brilliant and gifted Táhirih; whose passages inflamed <a name="p24"></a>the hostility of Husayn Khán and precipitated the initial outbreak of persecution in Shíráz; a single page of which had captured the imagination and entranced the soul of Hujjat; and whose contents had set afire the intrepid defenders of the Fort of Shaykh Tabarsí and the heroes of Nayríz and Zanján.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#HusaynKhán-i-Írvání">Husayn Khán</a>] 
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">24</DIV></center><p></small></td>
 </tr>
