--- a/download.html
+++ b/download.html
@@ -73,7 +73,7 @@ Right click on each file and download to your computer.<br>
 <center><h3><b>Miscellaneous</b></h3><p></center>
 <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsUnlZa240a0Frc1U/edit?usp=sharing">Arabic Dream Tablet</a>, as read by Nina Vazin<p>
 <a href="https://drive.google.com/file/d/0B6cYw5IwKTYscWhBOUgxcWE2cm8/edit?usp=sharing">Arabic/Persian Titles of Baha'u'llah</a>, as read by Nina Vazin&nbsp;&nbsp; <b>(<a href="CLUI/UnifiedIndex.html#Bahá'u'lláhTitlesandNames">CLUI</a>)</b><p>
-<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Arabic Prayer - Blessed Is The Spot</a>&nbsp;&nbsp; <b>(<i>Revelation Of Baha'u'llah</i>, <a href="Baha'i/Others/ROB/V4/p315-328Ch21.html#p316">vol.4 p.316</a>)</b><p>
+<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Arabic Chant of Prayer "Blessed Is The Spot"</a><a name="ArabicPrayer-BlessedIsTheSpot"></a>&nbsp;&nbsp; <b>(<i>Revelation Of Baha'u'llah</i>, <a href="Baha'i/Others/ROB/V4/p315-328Ch21.html#p316">vol.4 p.316</a>)</b><p>
 </center>
 
 
@@ -88,5 +88,8 @@ Download size is 1.16 Mbytes. Installation requires 3.03 Mbytes of disk space.
 <center><small><p><a href="index.html">Home</a>
 
 </center><p><p>
+<!-- to allow scrolling when hyperlinking to last entries...enough for 4K display -->
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
