--- a/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
+++ b/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
@@ -1170,16 +1170,16 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 			   <td align="center">2021-22</td>			   
 		</tr>
 		<tr>
-		       <td><b>8. Jád</b></td>
-		       <td align="center"><b>Generosity</b></td>
-			   <td align="center"><b>B.E. 179</b></td>
-			   <td align="center"><b>2022-23</b></td>			   
+		       <td>8. Jád</td>
+		       <td align="center">Generosity</td>
+			   <td align="center">B.E. 179</td>
+			   <td align="center">2022-23</td>
 		</tr>
 		<tr>
-		       <td>9. Bahá</td>
-		       <td align="center">Splendour</td>
-			   <td align="center">B.E. 180</td>
-			   <td align="center">2023-24</td>			   
+		       <td><b>9. Bahá</b></td>
+		       <td align="center"><b>Splendour</b></td>
+			   <td align="center"><b>B.E. 180</b></td>
+			   <td align="center"><b>2023-24</b></td>
 		</tr>
 		<tr>
 		       <td>10. Hubb</td>
@@ -1363,8 +1363,8 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 		Bahá’ís in East and West, holding administrative positions, whether public or private, should exert the utmost effort to obtain special leave from their superiors to enable them to observe these nine holy days.
 		<br>
 		<br>
-		
-		<center>4. ADDITIONAL MATERIAL GLEANED FROM NABIL'S NARRATIVE REGARDING THE BAHÁ’Í CALENDAR</center>
+
+		<center>4. ADDITIONAL MATERIAL GLEANED FROM NABIL'S NARRATIVE REGARDING THE BAHÁ’Í CALENDAR<a name="FROMNABIL'SNARRATIVE"></a> </center>
 		<p>
 		THE Badí' Calendar (Bahá’í Calendar) has been taken by me from the <i>Kitáb-i-Asma'</i>, one of the works written by the Báb. As I  have observed in these days that certain believers are inclined to regard the year in which Bahá’u’lláh departed from Baghdád to Constantinople as  marking the beginning of the Badí' Calendar, I have requested Mírzá Áqá Ján, the amanuensis of Bahá’u’lláh, to ascertain His will and desire concerning this matter. Bahá’u’lláh answered and said: 'The  year sixty A.H. (i.e. 1260 A.H., 1844 A.D.), the year of the Declaration of the Báb, must be regarded as the beginning of the Badí' Calendar.' The Declaration of the Báb took place on the evening preceding the fifth day of Jamádíyu’l-Avval, of the year 1260 A.H. It has been ordained that the solar calendar be followed and that the vernal Equinox, the day of Naw-Rúz, be regarded as the New Year's Day of the Badí' Calendar. The year sixty, in which the fifth day of Jamádíyu’l-Avval coincided with the sixty-fifth day after Naw-Rúz, has accordingly been regarded as the first year of the Badí' Calendar. As in that year, the day of Naw-Rúz, the vernal Equinox, preceded by sixty-six days the date of the Declaration of the Báb, I have therefore, throughout my history, regarded the Naw-Rúz of the year sixty-one A.H. (the Naw-Rúz immediately following the Declaration of the Báb) as the first Naw-Rúz of the Badí' Calendar. I have accordingly considered the Naw-Rúz of this present year, the year 1306 A.H., which is the 47th solar year after the Declaration of the Báb, as the 46th Naw-Rúz of the Badí' Calendar. 
 		<p>
