--- a/Baha'i/Others/ROB/V1/p294-314Ch18.html
+++ b/Baha'i/Others/ROB/V1/p294-314Ch18.html
@@ -130,7 +130,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p299">299</a></center><p>
 	   * The Báb explained in His Writings that attaining 'unto the presence of God', as promised in the Holy Books, would be none other than attaining the presence of 'Him Whom God shall make manifest'.<p>
-	   † Numerically, Hín is equal to 68, which means the year 1268. 'After Hín' indicates the beginning of the year 1269 This prophecy concerning Bahá'u'lláh originated from Shaykh Ahmad-i-Ahsá'í.<p>
+	   † Numerically, Hín is equal to 68, which means the year 1268. 'After Hín' indicates the beginning of the year 1269. This prophecy concerning Bahá'u'lláh originated from Shaykh Ahmad-i-Ahsá'í.<p>
 	   ‡ Nineteen.<p>
 	   § 1280 A.H. (A.D. 1863).<p>
 	   <hr>
